# mobile-web-best-practice-container

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mcuking/mwbpcontainer/: WebviewClientAspect.java
app/src/main/java/com/mcuking/mwbpcontainer/application/: MWBPApplication.java
bspatch/: build.gradle
bspatch/src/androidTest/java/com/hss01248/bspatch/: ExampleInstrumentedTest.java
bspatch/src/main/: AndroidManifest.xml
bspatch/src/main/cpp/: CMakeLists.txt  bs.c  bs.h
bspatch/src/main/cpp/md5/: md5.h  md5_util-lib.cpp  md5_util-lib.h
bspatch/src/main/java/com/hss01248/bspatch/: BsUtil.java
bspatch/src/test/java/com/hss01248/bspatch/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
webpackagekit/: build.gradle
webpackagekit/src/main/java/com/hht/webpackagekit/: PackageManager.java
webpackagekit/src/main/java/com/hht/webpackagekit/inner/: PackageInstallerImpl.java  ResourceManagerImpl.java
